# solauto

./: .gitignore  LICENSE  README.md  generateClients.cjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
audits/: Solauto Smart Contract Audit Report - Preliminary Report v2.pdf:Zone.Identifier
idl/: idl.json
idls/: jupiter.json  marginfi.json  pyth.json  solauto.json
idls/past-idl-versions/: solauto_v0.json
programs/jupiter-sdk/: Cargo.toml
programs/jupiter-sdk/src/: lib.rs
programs/marginfi-anchor/: Cargo.toml
programs/marginfi-sdk/: Cargo.toml
programs/marginfi-sdk/src/: lib.rs
programs/placeholder/: Cargo.toml
programs/placeholder/src/: lib.rs
programs/solauto/: Cargo.toml  README.md
programs/solauto-sdk/: Cargo.toml
programs/solauto-sdk/src/: lib.rs
programs/solauto-sdk/tests/: claim_referral_fees.rs  close_position.rs  general.rs  marginfi_open_position.rs  marginfi_protocol_interaction.rs  open_position.rs  test_utils.rs  update_position.rs  update_referral_states.rs
programs/solauto/src/: constants.rs  entrypoint.rs  lib.rs  macros.rs  main.rs  temp1.txt  temp2.txt
programs/solauto/src/clients/: marginfi.rs  mod.rs  solend.rs
programs/solauto/src/instructions/: close_position.rs  mod.rs  open_position.rs  protocol_interaction.rs  rebalance.rs  referral_fees.rs  refresh.rs  solend_open_position.rs  update_position.rs
programs/solauto/src/processors/: general.rs  marginfi.rs  mod.rs  position.rs  referral_state.rs  shared.rs  solend.rs
programs/solauto/src/rebalance/: mod.rs  rebalance_utils_v2.rs  rebalancer.rs  rebalancer_tests.rs  solauto_fees.rs  utils.rs
programs/solauto/src/rebalancer/: mod.rs  rebalancer.rs
programs/solauto/src/solend/: client.rs
programs/solauto/src/state/: automation.rs  mod.rs  referral_state.rs  solauto_position.rs
programs/solauto/src/tests/: mod.rs  wip.rs
programs/solauto/src/types/: errors.rs  instruction.rs  lending_protocol.rs  mod.rs  obligation_position.rs  rebalancer.rs  shared.rs  solana.rs  solauto.rs  solauto_manager.rs  solauto_position.rs
programs/solauto/src/utils/: ix_utils.rs  math_utils.rs  mod.rs  rebalance_utils.rs  solana_utils.rs  solauto_utils.rs  validation_utils.rs
solauto-sdk/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
solauto-sdk/local/: createFeeAccounts.ts  createISMAccounts.ts  createSolautoManagerAccount.ts  createTokenAccounts.ts  logPositions.ts  patchLUT.ts  shared.ts  txSandbox.ts  updateMarginfiLUT.ts  updateSolautoLUT.ts
solauto-sdk/src/: index.ts
solauto-sdk/src/clients/: flProviderAggregator.ts  flProviderBase.ts  index.ts  marginfiFlProvider.ts  referralStateManager.ts  solautoClient.ts  solautoMarginfiClient.ts  txHandler.ts
solauto-sdk/src/constants/: README.md  generalAccounts.ts  generalConstants.ts  index.ts  marginfiAccounts.ts  pythConstants.ts  solautoConstants.ts  switchboardConstants.ts  tokenConstants.ts
solauto-sdk/src/externalSdks/: index.ts
solauto-sdk/src/idls/: switchboard.json
solauto-sdk/src/jupiter-sdk/: index.ts
solauto-sdk/src/rebalance/: index.ts  rebalanceTxBuilder.ts  rebalanceValues.ts  solautoFees.ts
solauto-sdk/src/services/: index.ts
solauto-sdk/src/solautoPosition/: index.ts  marginfiSolautoPositionEx.ts  positionUtils.ts  solautoPositionEx.ts  utils.ts
solauto-sdk/src/transactions/: index.ts  transactionUtils.ts  transactionsManager.ts
solauto-sdk/src/types/: accounts.ts  index.ts  solauto.ts  transactions.ts
solauto-sdk/src/utils/: accountUtils.ts  deleteme.ts  generalUtils.ts  index.ts  instructionUtils.ts  jitoUtils.ts  jupiterUtils.ts  marginfiUtils.ts  numberUtils.ts  priceUtils.ts  pythUtils.ts  solanaUtils.ts  solautoUtils.ts  stringUtils.ts  switchboardUtils.ts
solauto-sdk/tests/: shared.ts
solauto-sdk/tests/transactions/: shared.ts  (+1 more)
typescript/solauto-sdk/: accounts.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.ts  utils.ts
(+200 files in other folders)
