[package]
name = "placeholder"
version = "0.1.0"
description = "placeholder"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "placeholder"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = ">=1.16"

[profile.release]
lto = "fat"
codegen-units = 1
