[package]
name = "solauto-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = ">=1.16"
borsh = "^0.10"
thiserror = "1.0.58"
num-derive = "0.4.2"
num-traits = "0.2.18"

[dev-dependencies]
solauto = { path = "../solauto" }
solana-program-test = ">=1.16"
solana-sdk = ">=1.16"
spl-associated-token-account = { version="=1.1.3", features = [ "no-entrypoint" ] }