[package]
name = "solauto"
version = "0.1.0"
description = "Solauto"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solauto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = ">=1.16"
spl-token = { version="=4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=1.1.3", features = [ "no-entrypoint" ] }
marginfi-sdk = { path = "../marginfi-sdk" }
marginfi-anchor = { path = "../marginfi-anchor" }
solend-sdk = { git = "https://github.com/Cheliosooo/solana-program-library.git", branch = "mainnet" }
num-traits = "0.2.18"
borsh = "1.3.1"
shank = "0.4.2"
thiserror = "1.0.58"
# serde_json = "1.0.114"
# reqwest = { version="0.11.25", features = ["json"] }
# serde = "1.0.197"
# base64 = "0.22.0"

[dev-dependencies]
tokio = { version="1.36.0", features = ["full"] }
solana-program-test = ">=1.16"

[profile.release]
lto = "fat"
codegen-units = 1
