[package]
name = "solauto"
version = "0.1.0"
description = "Solauto"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solauto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[net]
git-fetch-with-cli = true

[dependencies]
solana-program = ">=1.16"
spl-token = { version="=4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=1.1.3", features = [ "no-entrypoint" ] }
pyth-sdk-solana = "=0.10.0"
switchboard-v2 = "0.4.0"
# marginfi = { git = "https://github.com/mrgnlabs/marginfi-v2.git", branch = "main" }
# kamino_lending = { git = "https://github.com/Kamino-Finance/klend.git", branch = "master" }
marginfi-sdk = { path = "../marginfi-sdk" }
solend-sdk = { git = "https://github.com/Cheliosooo/solana-program-library.git", branch = "mainnet" }
num-traits = "0.2.18"
borsh = "^0.10"
shank = "0.4.2"
fixed = "1.27.0"
thiserror = "1.0.58"
bytemuck = "1.16.0"
# solana-sdk = ">=1.16"
# solana-client = ">=1.16"

[profile.release]
lto = "fat"
codegen-units = 1
